Actions
Bug #11320
closedreopening stdio streams with non-ANSI filenames fails on Windows
Bug #11320:
reopening stdio streams with non-ANSI filenames fails on Windows
Description
It fails with Errno::ENOENT on Windows even though the file exists and is readable. It's caused by using freopen() (https://github.com/ruby/ruby/blob/v2_2_2/io.c#L6765). A wrapper that converts to UTF-16LE and then calls wfreopen() has to be added to win32/win32.c.
Actions